--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,41 @@
 body {
+    background: #f2f2f2;
+    font-family: 'PT Sans',sans-serif;
+    font-size: 14px;
     margin: 0;
-    padding: 0;}
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .header {
-    width: 1280px;
-    height: 70px;
-    display: flex;
-
+    
+     width: 100%;
+     min-width: 1000px;
+     height: 120px;
+     background-color: blueviolet;
+     display: flex;
+     justify-content: space-between;
+     
 }
+     
+    
 
-.items {
+.items li {
     list-style-type: none;
-    display: flex;
-    padding: 0, 10px;
-    text-decoration: none;
-    color: red
+    display: inline-block;
+ 
 }
 
-.item-li a {
+.items li:last-child {
+    border: 1px solid green;
+    border-radius: 5px;
+    background-color: greenyellow;
+}
+
+.items a {
     text-decoration: none;
-    color: red
+    color: white;
+    display: block;
+    padding: 0 10px;
 }
