--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,15 @@ body {
 .header {
     
      width: 100%;
-     min-width: 1000px;
-     height: 120px;
-     background-color: blueviolet;
+     min-width: 500px;
+     height: 210px;
+     background-image: url('C:\Users\admin\Desktop\design\images\header.jpg');
+     background-size: cover;
+     background-position: center;
+     position: relative;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
      display: flex;
      justify-content: space-between;
      
